--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@headlessui/vue": "^1.7.7",
     "axios": "^1.2.1",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vue-awesome-paginate": "^1.1.46"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
